2005-12-27  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: fixed unwanted change in bugs mailing list address
	* configure.ac: moved development to version 4.1
	* m4/extra_dist.sh: added script to autogenerate extra dist Makefile.am
		
	* lib/dirname.c, lib/dirname.h [new files]: added dirname module
	* lib/basename.c [new file]: likewise
	* lib/stripslash.c [new file]: likewise
	* lib/Makefile.am: likewise (gnulib-generated)
	* m4/dirname.m4, m4/dos.m4 [new files]: likewise
	
	* libidu/idfile.c: add missing include directive for strsep.h
	* libidu/scanners.c: likewise
	* libidu/walker.c: likewise

	* libidu/scanners.c: add missing include for alloca.h
	* libidu/walker.c: likewise
	
	* src/mkid.c: add include directive for dirname.h
	* src/lid.c: likewise

	* src/*.c, libidu/*.c: enforce <> for system includes or their gnulib
	  replacements, and "" for program specific headers

2005-12-15  Claudio Fontana  <claudio@gnu.org>
	* src/mkid.c: tweak alloc-ed size of token signature to a minimum
	  of 1 byte. Fixes assertion failure filed as savannah support request
	  sr #104712.

	* testsuite/consistency: added test case for this bug
	* testsuite/single_file_token_bug.c [new file]: needed for new test
	* testsuite/Makefile.am: add new file to distribution

2005-12-11  Claudio Fontana  <claudio@gnu.org>
	* libidu/scanners.c: Fixed signed/unsigned char* assignments by
	  making both 'scanner_buffer' and 'id' unsigned char*.
	  characters from scanner_buffer are first assigned to an int prior
	  to checking with the class-macros;

	* src/mkid.c, configure.ac, libidu/iduglobal.h:
	  print an off_t value portably by using offtostr (gnulib)

	* intl/*, po/*: updated to latest version
	
2005-12-10  Claudio Fontana  <claudio@gnu.org>
	* applied savannah patch 2775: include scanner for the perl language

2005-11-01  Claudio Fontana  <claudio@gnu.org>
	* libidu/scanners.c: applied (with changes) savannah patch 2702: