@@ -3,7 +3,10 @@
 	* configure.ac: fixed unwanted change in bugs mailing list address
 	* configure.ac: moved development to version 4.1
 	* m4/extra_dist.sh: added script to autogenerate extra dist Makefile.am
-		
+	* src/Makefile.am: pass libgnu to the linker before and after libintl
+	  to solve mutual dependencies problems caused by gnulib modules
+	  getopt and regex, which include libintl.h
+			
 	* lib/dirname.c, lib/dirname.h [new files]: added dirname module
 	* lib/basename.c [new file]: likewise
 	* lib/stripslash.c [new file]: likewise
